No longer uses asterisk in reaction rates.

--- a/GUI.html
+++ b/GUI.html
@@ -94,7 +94,7 @@ textarea
 			2X_1 + P -> X_0 + 2X_1 + P at rate b<br/>
 			X_0 + X_1 + P -> X_1 + P at rate c<br/>
 			2X_0 + M -> X_0 + M at rate d<br/>
-			2X_1 + P -> X_1 + P at rate 2*b<br/>
+			2X_1 + P -> X_1 + P at rate 2b<br/>
 			2X_1 + M -> X_1 + M at rate e<br/>
 			X_0 + X_1 + M -> X_0 + M at rate f<br/>
 			2X_0 + P -> 2X_0 at rate a<br/>
